# simple-compiler

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
example/: different_types.txt  unappliable_oper.txt  uninit_use.txt  valid.txt
object/: version.hpp
src/: data_type.cpp  data_type.hpp  expression.cpp  expression.hpp  lexer.cpp  lexer.hpp  main.cpp  main.hpp  parser.cpp  parser.hpp  statement.cpp  statement.hpp  token.cpp  token.hpp  type_setter.cpp  type_setter.hpp  util.cpp  util.hpp
test/: expression_test.cpp  lexer_test.cpp  types_test.cpp
